--- a/morph_trait_annotation-8016/pyproject.toml
+++ b/morph_trait_annotation-8016/pyproject.toml
@@ -5,6 +5,7 @@ description = "Sparse autoencoders for vision transformers in PyTorch"
 readme = "README.md"
 requires-python = "==3.11.*"
 dependencies = [
+    "numpy==2.1.3",
     "altair>=5.4.1",
     "beartype>=0.19.0",
     "datasets>=3.0.1",
